--- a/spring-boot-app/Jenkinsfile
+++ b/spring-boot-app/Jenkinsfile
@@ -59,8 +59,8 @@ pipeline {
                     git config user.name "Sushant Jadhav"
                     BUILD_NUMBER=${BUILD_NUMBER}
                     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
-                    git commit -a
                     git add spring-boot-app-manifests/deployment.yml
+                    git add -A
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
