Updated deployment image to version 20240117

--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: sushantjadhavhcl/ultimate-cicd:replaceImageTag
+        image: sushantjadhavhcl/ultimate-cicd:20240117
         ports:
         - containerPort: 80
