--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -10,8 +10,8 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on:  abhishekf5/maven-abhishek-docker-agent:v1
+              
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
