--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: sushantjadhavhcl/ultimate-cicd:202401181818181717
+        image: sushantjadhavhcl/ultimate-cicd:2024
         ports:
         - containerPort: 80
