--- a/.github/workflows/Java_maven_CI.yml
+++ b/.github/workflows/Java_maven_CI.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
          name: Java-maven-artifact
-         path: /spring-boot-app/target
+         path: spring-boot-app/target/spring-boot-web.jar
          
 
     
