--- a/.github/workflows/Java_maven_CI.yml
+++ b/.github/workflows/Java_maven_CI.yml
@@ -20,13 +20,16 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file spring-boot-app/pom.xml
+      run: |
+            mvn -B package --file spring-boot-app/pom.xml
+            mvn deploy
+      
 
-    - name: Push artifact to repo
-      uses: actions/upload-artifact@v4
-      with:
-         name: Java-maven-artifact
-         path: spring-boot-app/target/spring-boot-web.jar
+    # - name: Push artifact to repo
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #      name: Java-maven-artifact
+    #      path: spring-boot-app/target/spring-boot-web.jar
          
 
     
