--- a/.github/workflows/Java_maven_CI.yml
+++ b/.github/workflows/Java_maven_CI.yml
@@ -21,7 +21,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: |
-            mvn -B package --file spring-boot-app/pom.xml
+            cd spring-boot-app
+            mvn -B package --file pom.xml
             mvn deploy
       
 
