--- a/.github/workflows/Java_maven_CI.yml
+++ b/.github/workflows/Java_maven_CI.yml
@@ -24,7 +24,9 @@ jobs:
             cd spring-boot-app
             mvn -B package --file pom.xml
     - name: Publish to Azure Artifacts
-      run: mvn deploy
+      run: |
+           cd spring-boot-app
+           mvn deploy
       env:
         ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
         ARTIFACTORY_PASSWORD: ${{ secrets.AZURE_DEV_TOKEN }}
