--- a/.github/workflows/Java_maven_CI.yml
+++ b/.github/workflows/Java_maven_CI.yml
@@ -19,14 +19,17 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Configure Maven
+      run: |
+            cp .github/maven/settings.xml $HOME/.m2/settings.xml
     - name: Build with Maven
       run: |
             cd spring-boot-app
             mvn -B package --file pom.xml
     - name: Publish to Azure Artifacts
       run: |
-           cd spring-boot-app
-           mvn deploy
+            cd spring-boot-app
+            mvn deploy
       env:
         ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
         ARTIFACTORY_PASSWORD: ${{ secrets.AZURE_DEV_TOKEN }}
