--- a/.github/workflows/Java_maven_CI.yml
+++ b/.github/workflows/Java_maven_CI.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -21,8 +21,7 @@ jobs:
         cache: maven
     - name: Configure Maven
       run: |
-            cd .github
-            cp maven/settings.xml $HOME/.m2/settings.xml
+            cp .github/maven/settings.xml $HOME/.m2/settings.xml
     - name: Build with Maven
       run: |
             cd spring-boot-app
